--- a/src/SearchPage/SearchPage.module.css
+++ b/src/SearchPage/SearchPage.module.css
@@ -1,3 +1,4 @@
+
 .container {
     position: absolute;
     top: 50%;
@@ -48,8 +49,6 @@
 .input2::after {
     content: '';
     background: url('/public/images/heart.svg');
-    position: absolute;
-    left: -50px;
 }
 
 .btn {
@@ -63,6 +62,7 @@
 }
 
 .form {
+    position: relative;
     display: flex;
 }
 
@@ -82,20 +82,43 @@
     margin-bottom: 20px;
 }
 
-.filter_pic {
+.filter_icon {
     display: flex;
     gap: 15px;
 }
 
-.pic {
+.icon {
     width: 24px;
     height: 24px;
+    cursor: pointer;
+    color: lightslategrey;
 }
 
-.pic_active {
+.icon_checked {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
     color:black
 }
 
 .h2 {
-    font-size: 16px;
+    font-size: 18px;
+}
+
+.container_grid {
+    width: 1040px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
+}
+
+.faHeart {
+    color: #1390E5;
+    font-size: 24px;
+    position: absolute;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 82%;
+    cursor: pointer;
 }
