--- a/src/VideoCard/VideoCard.module.css
+++ b/src/VideoCard/VideoCard.module.css
@@ -1,5 +1,6 @@
 .outer {
     width: 1040px;
+    margin-bottom: 30px;
 }
 
 .container {
@@ -8,7 +9,7 @@
     display: flex;
     justify-content: start;
     gap: 20px;
-    margin-bottom: 32px;
+    cursor: pointer;
 }
 
 .h1 {
