--- a/src/VideoCardGrid/VideoCardGrid.module.css
+++ b/src/VideoCardGrid/VideoCardGrid.module.css
@@ -1,14 +1,9 @@
-.outer {
-    width: 1040px;
-}
-
 .container {
     width: 245px;
     height: 226px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
+    cursor: pointer;
 }
 
 .h1 {
@@ -19,12 +14,14 @@
 .pic {
     min-width: 245px;
     height: 138px;
+    margin-bottom: 8px;
 }
 
 .title {
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
+    margin-bottom: 8px;
 }
 
 .desc {
@@ -32,5 +29,15 @@
     font-weight: normal;
     line-height: 16px;
     color: grey;
+}
+
+.txt_container {
+    height: 72px;
+    max-width: 245px;
+    overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
 }
 
