--- a/src/VideoCard/VideoCard.module.css
+++ b/src/VideoCard/VideoCard.module.css
@@ -25,13 +25,22 @@
 .title {
     font-size: 16px;
     font-weight: 500;
-    line-height: 20px;
+    margin: 0;
 }
 
 .desc {
-    font-size: 16px;
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 14px;
     font-weight: normal;
-    line-height: 20px;
     color: grey;
+    max-width: 510px;
+    overflow: hidden;
 }
 
+.txt_container {
+    width: 510px;
+    display: flex;
+    flex-direction: column;
+}
